refactor(api): delete a bunch of shitty activity detection code
